@@ -1,5 +1,7 @@
 2008-04-13  Andreas Kirschbaum
 
+	* Properly format tooltips for spells.
+
 	* Properly reset animation states when re-connecting to a server.
 
 	* Save keybindings.txt and shortcuts.txt only if changed.
